# backend

./: .Dockerfile.swp  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  doppler.yaml  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  user_crud.py  user_router.py  user_schema.py
src/final_backend/: database.py  main.py  models.py  movie_crud.py  schema.py  track_crud.py  user_crud.py  user_router.py  user_schema.py
src/final_backend/domain/user/: user_crud.py  user_router.py  user_schema.py
src/final_backend/router/: movie_router.py  playlist_router.py  sim_router.py  sim_router_backup.py  tmdb_router.py  track_router.py  user_router.py
