[project]
name = "final-backend"
version = "0.1.0"
description = "Back End"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.5",
    "pydantic[email]>=2.9.2",
    "sqlalchemy>=2.0.36",
    "passlib>=1.7.4",
    "mariadb>=1.1.11",
    "pymysql>=1.1.1",
    "cryptography>=43.0.3",
    "jose>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "pyjwt>=2.10.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
